[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_name" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.1
text = "Dr. Cliens Creature Crawler"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="title_name"]
margin_left = 100.0
margin_top = 180.0
margin_right = 250.0
margin_bottom = 220.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nft_button" type="Button" parent="title_name"]
margin_left = 100.0
margin_top = 230.0
margin_right = 250.0
margin_bottom = 270.0
text = "Characters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_button" type="Button" parent="title_name"]
margin_left = 100.0
margin_top = 280.0
margin_right = 250.0
margin_bottom = 320.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about_button" type="Button" parent="title_name"]
margin_left = 100.0
margin_top = 330.0
margin_right = 250.0
margin_bottom = 370.0
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="Button" parent="title_name"]
margin_left = 100.0
margin_top = 380.0
margin_right = 250.0
margin_bottom = 420.0
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="title_name/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="title_name/nft_button" to="." method="_on_nft_button_pressed"]
[connection signal="pressed" from="title_name/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="title_name/about_button" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="title_name/quit_button" to="." method="_on_quit_button_pressed"]
